chore: update project name and localization, adjust layout components

--- a/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">mitu-app</string>
-    <string name="main_activity_title">mitu-app</string>
+    <string name="app_name">兰亭书签</string>
+    <string name="main_activity_title">兰亭书签</string>
 </resources>
